# cello

./: CMakeLists.txt
animation/: test1.cpp  test2.cpp
configurable/: version.h.in
include/: cello.h  cello.hpp
include/cello/: .gif.h.swo  animation.h  cello.h  colourMap.h  compile.h  frame.h  frame_2.h  gif.h  image.h  pixel.h  settings.h  version.h
include/cello/gif/: ExtensionBlock.h  common.h  custom.h  standard.h
src/: animation.cpp  cello.cpp  colourMap.cpp  compile.cpp  frame.cpp  gif.cpp  image.cpp  main.cpp  pixel.cpp  settings.cpp
src/gif/: common.cpp  custom.cpp  gif.cpp.old  standard.cpp
test/: check_custom  check_standard  run_test
